--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :address %>
-    <%= form.select :address, Report::ADDRESS, {include_blank: "Selet an address"}, class: "ui dropdown" %>
+    <%= form.select :address, Report::ADDRESS, {include_blank: "Select an address"}, class: "ui dropdown" %>
   </div>
 
   <div class="field">
