--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,20 @@
-<h1>StaticPages#home</h1>
-<p>
+<% provide(:title, "Home") %>
+<div class="center jumbotron">
+  <h1>Welcome to Pothole Tracking and Repair System</h1>
+
+
+  <h2>
   This is the home page for the
   <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
-</p>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("scut_logo.jpg", alt: "SCUT logo"),
+            'http://www.scut.edu.cn' %>
+<%= image_tag("kitten.jpg", cat: "A Cat") %>
+
+
+
