--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Editing Report</h1>
+<div class="center">
+  <%= render 'form', report: @report %>
 
-<%= render 'form', report: @report %>
+  <%= link_to 'Show', @report %> |
+  <%= link_to 'Back', reports_path %>
+</div>
 
-<%= link_to 'Show', @report %> |
-<%= link_to 'Back', reports_path %>
