--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,20 +1,19 @@
 <% provide(:title, "Home") %>
+<%= link_to image_tag("scut_logo.jpg", alt: "SCUT logo"),
+                                         'http://www.scut.edu.cn' %>
 <div class="center jumbotron">
   <h1>Welcome to Pothole Tracking and Repair System</h1>
 
-
   <h2>
   This is the home page for the
-  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
+  <a href="http://www.railstutorial.org/">Pothole Tracking and Repair System</a>.
   </h2>
 
   <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("scut_logo.jpg", alt: "SCUT logo"),
-            'http://www.scut.edu.cn' %>
-<%= image_tag("kitten.jpg", cat: "A Cat") %>
+
+<%#= image_tag("kitten_cat.jpg", cat: "A Cat") %>
 
 
 
