--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,10 +21,10 @@
     <%= form.email_field :email %>
   </div>
 
-  <div class="field">
-    <%= form.label :"Password" %>
-    <%= form.password_field :psd%>
-  </div>
+<!--  <div class="field">-->
+    <%#= form.label :"Password" %>
+    <%#= form.password_field :psd%>
+<!--  </div>-->
 
   <div class="actions">
     <%= form.submit %>
