--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,47 +1,21 @@
-<%= form_with(model: report, local: true) do |form| %>
-  <% if report.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(report.errors.count, "error") %> prohibited this report from being saved:</h2>
+<%= form_for(@report) do |form| %>
+  <%= render 'shared/error_messages', object: form.object %>
 
-      <ul>
-      <% report.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= form.label :address %>
+  <%= form.select :address, Report::ADDRESS,
+                  {include_blank: "Select an address"},
+                  class: "ui dropdown",
+                  class: 'form-control' %>
 
-  <div class="field">
-    <%= form.label :address %>
-    <%= form.select :address, Report::ADDRESS, {include_blank: "Select an address"}, class: "ui dropdown" %>
-  </div>
 
-  <div class="field">
-    <%= form.label :size %>
-    <%= form.number_field :size, value = {min:1, max:10} %>
-  </div>
+  <%= form.label :size %>
+  <%= form.number_field :size, min:1, max:10, class: 'form-control' %>
 
-  <div class="field">
-    <%= form.label :location %>
-    <%= form.text_field :location %>
-  </div>
+  <%= form.label :location %>
+  <%= form.text_field :location, class: 'form-control' %>
 
-  <div class="field">
-    <%= form.label :district %>
-    <%= form.text_field :district %>
-  </div>
+  <%= form.label :district %>
+  <%= form.text_field :district, class: 'form-control' %>
 
-<!--  <div class="field">-->
-    <%#= form.label :repair_priority %>
-    <%#= form.hidden_field :repair_priority %>
-<!--  </div>-->
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.number_field :user_id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  <%= form.submit yield(:button_text), class:"btn btn-primary"%>
 <% end %>
