--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -1,8 +1,12 @@
+<% provide(:button_text, "Edit report") %>
 <h1>Editing Report</h1>
-<div class="center">
-  <%= render 'form', report: @report %>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= render 'form', report: @report %>
+    </div>
+  </div>
 
   <%= link_to 'Show', @report %> |
-  <%= link_to 'Back', reports_path %>
-</div>
+  <%= link_to 'Back', current_user %>
+
 
