--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,14 @@
 <% provide(:title, "Home") %>
-<%= link_to image_tag("scut_logo.jpg", alt: "SCUT logo"),
-                                         'http://www.scut.edu.cn' %>
+<div align="center">
+  <%= link_to image_tag("logos/logo.jpg", alt: "logo"),
+              'http://www.scut.edu.cn' %>
+  <style>
+    img {
+      width: 50%;
+    }
+  </style>
+</div>
+
 <div class="center jumbotron">
   <h1>Welcome to Pothole Tracking and Repair System</h1>
 
@@ -9,7 +17,7 @@
   <a href="http://www.railstutorial.org/">Pothole Tracking and Repair System</a>.
   </h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 
