--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing User</h1>
+<% provide(:title, 'Update') %>
+<% provide(:button_text, 'Update') %>
+<h1>Editing Info</h1>
 
-<%= render 'form', user: @user %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+      <%= render 'form' %>
+  </div>
+</div>
+
+<%#= render 'form', user: @user %>
+
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
